tests/ui/impl-trait/precise-capturing/redundant.rpitit.stderr
error: `use<...>` precise capturing syntax is currently not allowed in return-position `impl Trait` in traits
  --> $DIR/redundant.rs:18:35
   |
LL |     fn in_trait() -> impl Sized + use<'a, Self>;
   |                                   ^^^^^^^^^^^^^
   |
   = note: currently, return-position `impl Trait` in traits and trait implementations capture all lifetimes in scope

error: `use<...>` precise capturing syntax is currently not allowed in return-position `impl Trait` in traits
  --> $DIR/redundant.rs:23:35
   |
LL |     fn in_trait() -> impl Sized + use<'a> {}
   |                                   ^^^^^^^
   |
   = note: currently, return-position `impl Trait` in traits and trait implementations capture all lifetimes in scope

error: aborting due to 2 previous errors

